[tool.poetry]
name = "canada-holiday"
version = "0.1.0"
description = ""
authors = ["Sunmin Kim <kmsunmin@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"