[tool.poetry]
name = "canada-holiday"
version = "1.0.0"
description = "Python package for Canadian holidays"
authors = ["Sunmin Kim <kmsunmin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
coverage-badge = "1.1.0"
pre-commit = "^3.2.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
